refactor(snackbar): Drop snackbar's dependency of button

--- a/demos/snackbar.html
+++ b/demos/snackbar.html
@@ -78,7 +78,7 @@
              aria-hidden="true">
           <div class="mdc-snackbar__text">Message sent</div>
           <div class="mdc-snackbar__action-wrapper">
-            <button type="button" class="mdc-button mdc-snackbar__action-button">Undo</button>
+            <button type="button" class="mdc-snackbar__action-button">Undo</button>
           </div>
         </div>
       </section>
@@ -158,7 +158,7 @@
                aria-hidden="true">
             <div class="mdc-snackbar__text"></div>
             <div class="mdc-snackbar__action-wrapper">
-              <button type="button" class="mdc-button mdc-snackbar__action-button"></button>
+              <button type="button" class="mdc-snackbar__action-button"></button>
             </div>
           </div>
           <div dir="rtl">
@@ -169,7 +169,7 @@
                  aria-hidden="true">
               <div class="mdc-snackbar__text"></div>
               <div class="mdc-snackbar__action-wrapper">
-                <button type="button" class="mdc-button mdc-snackbar__action-button"></button>
+                <button type="button" class="mdc-snackbar__action-button"></button>
               </div>
             </div>
           </div>
@@ -180,7 +180,7 @@
                aria-hidden="true">
             <div class="mdc-snackbar__text"></div>
             <div class="mdc-snackbar__action-wrapper">
-              <button type="button" class="mdc-button mdc-snackbar__action-button"></button>
+              <button type="button" class="mdc-snackbar__action-button"></button>
             </div>
           </div>
           <div dir="rtl">
@@ -191,7 +191,7 @@
                  aria-hidden="true">
               <div class="mdc-snackbar__text"></div>
               <div class="mdc-snackbar__action-wrapper">
-                <button type="button" class="mdc-button mdc-snackbar__action-button"></button>
+                <button type="button" class="mdc-snackbar__action-button"></button>
               </div>
             </div>
           </div>
